[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/Character/player_green_sprite.png" type="Texture" id=1]
[ext_resource path="res://Player2/Player2.gd" type="Script" id=2]
[ext_resource path="res://Controls/Joystick/Joystick.tscn" type="PackedScene" id=3]
[ext_resource path="res://Controls/RightGroupButton/RightGroupButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Other/ShadowWhite_16x16.png" type="Texture" id=5]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Other/sword-shadow.png" type="Texture" id=7]
[ext_resource path="res://Effects/Skill/SuperDash/SuperDash.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player3/PickupZone.gd" type="Script" id=9]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Fonts/my-font-1/test.fnt" type="BitmapFont" id=11]
[ext_resource path="res://Materials/BlinkEffect/white_color.shader" type="Shader" id=12]
[ext_resource path="res://Effects/DashParticles/dash_particles.tscn" type="PackedScene" id=13]
[ext_resource path="res://Player3/ScreenShake.gd" type="Script" id=14]
[ext_resource path="res://Assets/Character/sword-attack-combo2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Character/player-idle.png" type="Texture" id=16]
[ext_resource path="res://Player2/AttackTrail.tscn" type="PackedScene" id=17]
[ext_resource path="res://Player2/PlaySkill.tscn" type="PackedScene" id=18]
[ext_resource path="res://Assets/Music/mixkit/mixkit-fast-sword-whoosh-2792.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/SFX/Mixkit/mixkit-throw-hard-wind-woosh-1488(1).wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/SFX/Mixkit/player_hurt.wav" type="AudioStream" id=21]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 12 )
shader_param/active = false

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SwordFacing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12, 17 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SwordFacing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12, 17 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=7]
resource_name = "sword_combo_2_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SwordFacing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "sword_combo_2_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SwordFacing:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordFacing/SwordHitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.0
height = 12.0

[sub_resource type="Animation" id=10]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 6, 8 )

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.784314 )

[node name="Player2" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
dash_object = ExtResource( 13 )
super_dash = ExtResource( 8 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.196078 )
show_behind_parent = true
position = Vector2( 0, -4 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 16 )
offset = Vector2( 0, -12 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="SwordShadow" type="Sprite" parent="Sprite"]
self_modulate = Color( 0, 0, 0, 0.196078 )
show_behind_parent = true
position = Vector2( -13, 0 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="ScreenShake" type="Node2D" parent="Camera2D"]
script = ExtResource( 14 )

[node name="ShakeTween" type="Tween" parent="Camera2D/ScreenShake"]

[node name="Frequency" type="Timer" parent="Camera2D/ScreenShake"]

[node name="Duration" type="Timer" parent="Camera2D/ScreenShake"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )
anims/sword_attack_left = SubResource( 5 )
anims/sword_attack_right = SubResource( 6 )
anims/sword_combo_2_left = SubResource( 7 )
anims/sword_combo_2_right = SubResource( 8 )

[node name="Control" type="CanvasLayer" parent="."]

[node name="Joystick" type="Control" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" parent="Control/Joystick" instance=ExtResource( 3 )]
position = Vector2( 64, -64 )

[node name="RightGroupButton" parent="Control" instance=ExtResource( 4 )]

[node name="SwordFacing" type="Position2D" parent="."]
position = Vector2( 0, -8 )
rotation = -1.5708

[node name="SwordHitbox" type="Area2D" parent="SwordFacing"]
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SwordFacing/SwordHitbox"]
polygon = PoolVector2Array( -30, -8, -16, -4, 16, -4, 30, -10, 30, 12, 16, 24, 4, 30, -6, 30, -18, 24, -30, 12 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 10 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -10 )
shape = SubResource( 9 )

[node name="HeadDebug" type="Node2D" parent="."]

[node name="HP" type="Label" parent="HeadDebug"]
visible = false
margin_left = -96.0
margin_top = -42.0
margin_right = 96.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 11 )
text = "Abc000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RStep" type="Position2D" parent="."]
position = Vector2( 4, 0 )

[node name="LStep" type="Position2D" parent="."]
position = Vector2( -4, 0 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "stop"
anims/start = SubResource( 10 )
anims/stop = SubResource( 11 )

[node name="PickupZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 128
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
position = Vector2( 0, -6 )
shape = SubResource( 12 )

[node name="AttackTrail" parent="." instance=ExtResource( 17 )]
visible = false
position = Vector2( -1, -17 )
z_index = -1
width = 20.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 13 )
targetPath = NodePath("..")
trailLength = 10

[node name="CreateEffectObject" parent="." instance=ExtResource( 6 )]

[node name="PlaySkill" parent="." instance=ExtResource( 18 )]

[node name="AttackComboTimer" type="Timer" parent="."]
one_shot = true

[node name="sword_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )

[node name="dash_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
volume_db = -15.0

[node name="hurt_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
[connection signal="timeout" from="Camera2D/ScreenShake/Frequency" to="Camera2D/ScreenShake" method="_on_Frequency_timeout"]
[connection signal="timeout" from="Camera2D/ScreenShake/Duration" to="Camera2D/ScreenShake" method="_on_Duration_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
[connection signal="timeout" from="AttackComboTimer" to="." method="_on_AttackComboTimer_timeout"]

[editable path="Hurtbox"]
